# Transcribe

./: .env.example  .gitignore  CHANGELOG.md  INSTALLATION.md  README.md  RELEASE_CHECKLIST.md  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  transcribe  transcribe_groq.py
.github/workflows/: ci.yml  publish-apt.yml  publish-brew.yml  publish-npm.yml  publish-pypi.yml  release.yml
Formula/: transcribe-all.rb
apt/: Packages  transcribe-all_0.3.0_all.deb  transcribe-all_0.4.0_all.deb  transcribe-all_0.5.0_all.deb
npm/: .npmignore  README.md  package.json
npm/scripts/: install.js
scripts/: build_apt_repo.sh  build_deb.sh
tests/: conftest.py  test_config.py  test_formatting.py  test_output.py  test_sentences.py  test_speakers.py  test_transcribe.py
