[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-all"
version = "0.3.0"
description = "CLI audio transcription via Groq Whisper with optional speaker diarization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "rich>=13.7",
]

[project.optional-dependencies]
diarize = [
    "pyannote.audio>=3.1",
    "torch>=2.2",
    "torchaudio>=2.2",
]
dev = [
    "pytest>=7.4",
]

[project.scripts]
transcribe = "transcribe_groq:main"

[tool.setuptools]
py-modules = ["transcribe_groq"]
